ajout exemples formulaires

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 {{title}}
 <app-formulaire-test></app-formulaire-test>
+<hr>
+<app-liste-chips-fruits></app-liste-chips-fruits>
 
 <router-outlet></router-outlet>
